# symbols

./: CMakeLists.txt  DedicatedServer.h
actor/: Actor.h
actor/player/: Player.h  ServerPlayer.h
include/bds/: DedicatedServer.h  Material.h
include/bds/actor/: Actor.h  Mob.h
include/bds/bedrock/: DedicatedServer.h  Minecraft.h  ServerInstance.h
include/bds/block/: Block.h  BlockDefinition.h  BlockLegacy.h  BlockProperty.h  BlockSource.h  BlockSupportType.h  ThreadsafeCachedBlock.h  VanillaBlocks.h
include/bds/container/: Container.h  IContainerManager.h  PlayerUIContainer.h  SimpleContainer.h
include/bds/core/: Core.h  File.h  FileStdStreamBuf.h  FileStream.h  FileSystem.h  FileSystemImpl.h  FileSystem_generic.h  File_c.h  FlatFile.h  FlatFileSystemImpl.h  InputFileStream.h  OutputFileStream.h  StorageAreaState.h  StorageAreasTree.h  TransactionFrame.h  ZipUtils.h
includes/actor/: Actor.h  Mob.h
includes/block/: Block.h  BlockLegacy.h  VanillaBlocks.h
includes/container/: Container.h  IContainerManager.h  PlayerUIContainer.h  SimpleContainer.h
includes/core/: Profile.h
includes/inventory/: Inventory.h
includes/item/: Item.h  ItemInstance.h  ItemStack.h  ItemStackBase.h  VanillaItemTiers.h  VanillaItems.h  WeaponItem.h
includes/level/: Dimension.h  Level.h  ServerLevel.h
includes/nbt/: CompoundTag.h
includes/network/: Compressibility.h
includes/util/: AABB.h  BinaryStream.h  BlockPos.h  ChunkPos.h  StateVectorComponent.h  Vec2.h  Vec3.h
level/: Level.h  ServerLevel.h
util/: BlockPos.h  ChunkPos.h  Vec2.h  Vec3.h
(+1958 files in other folders)
